welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: not found: value getMondeLaugeur
  var y = getMondeLaugeur()
          ^